# Gmail_Finance_Scraper

./: .gitignore  Dockerfile  README.md  credentials.json  email_amounts.xlsx  gmail_amounts_to_excel.py  pyproject.toml  requirements.txt
gmail_finance_scraper/: __init__.py  cli.py  scanner.py  web_ui.py
gmail_ui/: manage.py
gmail_ui/gmail_ui/: asgi.py  settings.py  wsgi.py
gmail_ui/scraper/: gmail_amounts_to_excel.py  tests.py  urls.py  views.py
gmail_ui/scraper/templates/scraper/: home.html
